date, time format modify

--- a/app_festa/templates/festa_home/success_create.html
+++ b/app_festa/templates/festa_home/success_create.html
@@ -11,7 +11,7 @@
         <h2>페스타 등록하기</h2>
         <br>
         <div class="container">
-            그림 넣고~
+            <img src="">
             <h3>등록이 완료되었습니다.</h3>
             <p>승인 완료까지 약 3일이 소요됩니다.</p>
             <br>
