--- a/app_festaNow/templates/festa_now/staff/home/detail_home.html
+++ b/app_festaNow/templates/festa_now/staff/home/detail_home.html
@@ -63,8 +63,8 @@
                 {% csrf_token %}
                 작성자 : <input name="writer" type="text">
                 <br>
-                내용 : <textarea name="content" id="" cols="30" rows="10"></textarea>
-                <input type="submit">
+                <textarea name="content" id="" cols="30" rows="10" placeholder="댓글을 입력해 주세요"></textarea>
+                <input type="submit" value="댓글 작성">
             </form>
     
         </div>
