--- a/app_festaNow/templates/festa_now/audience/lost_found/audience_lost_found.html
+++ b/app_festaNow/templates/festa_now/audience/lost_found/audience_lost_found.html
@@ -37,7 +37,8 @@
         <a href="{% url 'a_detail_lost_found' festa.id lost_found.id %}"> : {{lost_found.title}}</a>
         {{lost_found.post_type}}
         {{lost_found.writer}}
-        {{lost_found.pub_date}}
+        {{lost_found.pub_date|date:"m/d"}}
+        {{lost_found.pub_date|time:"H:i"}}
         <br>
         <a href="{% url 'a_edit_lost_found' festa.id lost_found.id %}" class="card-link">수정하기</a>
         <a href="{% url 'a_delete_lost_found' festa.id lost_found.id %}" class="card-link">삭제하기</a>
