--- a/app_festaNow/templates/festa_now/audience/now.html
+++ b/app_festaNow/templates/festa_now/audience/now.html
@@ -36,7 +36,8 @@
             <br>
             <a href="{% url 'detail_now' festa.id now.id %}"> : {{now.title}}</a> 
             {{now.writer}}
-            {{now.pub_date}}
+            {{now.pub_date|date:"m/d"}}
+            {{now.pub_date|time:"H:i"}}
             <br>
             <a href="{% url 'edit_now' festa.id now.id %}" class="card-link">수정하기</a>
             <a href="{% url 'delete_now' festa.id now.id %}" class="card-link">삭제하기</a>
