--- a/app_festaNow/templates/festa_now/staff/new_team.html
+++ b/app_festaNow/templates/festa_now/staff/new_team.html
@@ -31,7 +31,7 @@
         <br>
         [Body]
         <br>
-        <textarea name="body" id="" cols="30" rows="10" placeholder="내용을 입력해 주세요 style="padding:10px; margin:10px;"></textarea>
+        <textarea name="body" id="" cols="30" rows="10" placeholder="내용을 입력해 주세요" style="padding:10px; margin:10px;"></textarea>
         <br>
         
         <button type='submit'>게시글 작성</button>
