--- a/app_festaReady/templates/festa_ready/create_accompany.html
+++ b/app_festaReady/templates/festa_ready/create_accompany.html
@@ -2,15 +2,6 @@
 
 <form action=" {% url 'create_accompany' festa.id %}" method="POST" enctype="multipart/form-data">
         {% csrf_token %}
-        <label>제목</label><br>
-        <input type="text" name="title" placeholder="제목을 입력해 주세요"><br>
-    
-        <label>작성자</label><br>
-        <input type="text" name="writer"><br>
-
-        <label>비밀번호</label><br>
-        <input type="password" name="password"><br>
-    
         <label>지역</label><br>
         <select name="area">
             <option name="서울">서울</option>
@@ -24,6 +15,16 @@
             <option name="전남">전남</option>
             <option name="제주">제주</option>
         </select><br>
+        <label>제목</label><br>
+        <input type="text" name="title" placeholder="제목을 입력해 주세요"><br>
+    
+        <label>작성자</label><br>
+        <input type="text" name="writer" placeholder="작성자를 입력해 주세요"><br>
+
+        <label>비밀번호</label><br>
+        <input type="password" name="password" placeholder="비밀번호를 입력해 주세요"><br>
+    
+        
     
         <label>내용</label><br>
         <textarea name="description" placeholder="내용을 입력해 주세요"></textarea><br>
