--- a/app_festa/templates/festa_home/confirm_login.html
+++ b/app_festa/templates/festa_home/confirm_login.html
@@ -1,17 +1,12 @@
-{% extends 'base.html' %}
-<!-- 
-[base.html]
-<head>
-</head>
-
-<body>
- -->
+{% extends 'base_copyright_version.html' %}
 {% block content %}
-<div class="container">
+
+
+<!-- <div class="container">
     <h2>등록 확인</h2>
     <br>
     <div class="container">
-        <form action="{% url 'confirm' %}" method="POST">
+        <form action="{% url 'confirm' registerNum.id %}" method="POST">
             {% csrf_token %}
             <p>인증번호를 입력해주세요</p>
             <input class="btn " type="submit" value="확인">
@@ -26,5 +21,5 @@
         width: 400px;
         height: 300px;
     }
-</style>
+</style> -->
 {% endblock %}
