--- a/app_festa/templates/festa_home/staff_notice.html
+++ b/app_festa/templates/festa_home/staff_notice.html
@@ -1,15 +1,8 @@
-{% extends 'base.html' %}
-<!-- 
-[base.html]
-<head>
-</head>
-
-<body>
- -->
- {% block content %}
+{% extends 'base_copyright_version.html' %}
+{% block content %}
 
 <h1>Staff 공지사항</h1>
-<a href="{% url 'staff_new'%}">글쓰기 </a>
+<!-- <a href="{% url 'staff_new'%}">글쓰기 </a>
 
 <hr>
 {% for staff in staffs.all %}
@@ -22,10 +15,10 @@
 <a href="{% url 'staff_delete' staff.id %}" class="card-link">삭제하기</a>
 
 <div class="middle">
-    <hr>
+    <hr> -->
 
     {% endfor %}
        
 
 
-{% endblock %}
+{% endblock %} -->
