--- a/app_festaNow/templates/festa_now/audience/home/audience_home.html
+++ b/app_festaNow/templates/festa_now/audience/home/audience_home.html
@@ -1,12 +1,5 @@
-{% extends 'base.html' %}
-<!-- 
-[base.html]
-<head>
-</head>
-
-<body>
- -->
- {% block content %}
+{% extends 'base_copyright_version.html' %}
+{% block content %}
  
     <div class="row">
         <div class="col-md-5">
@@ -32,7 +25,7 @@
             <a href="{% url 'a_new_home' festa.id %}">글쓰기 </a>
         
             <hr>
-            {% for home in homes.all %}
+            {% for home in home_list %}
             <br>
             <a href="{% url 'a_detail_home' festa.id home.id %}"> : {{home.title}}</a>
             {{home.region}}
@@ -47,6 +40,22 @@
             </div>
         
             {% endfor %}
+
+            <div class="middle">
+                {%if home_list.has_previous%}
+                <a href="?page=1">First</a>
+                <a href="?page={{home_list.previous_page_number}}">Previous</a>
+                {%endif%}
+
+                <span>{{home_list.number}}</span>
+                <span>of</span>
+                <span>{{home_list.paginator.num_pages}}</span>
+
+                {%if home_list.has_next%}
+                <a href="?page={{home_list.next_page_number}}">Next</a>
+                <a href="?page={{home_list.paginator.num_pages}}">Last</a>
+                {%endif%}
+            </div>
 
 
     </div>
