--- a/app_festaNow/templates/festa_now/audience/now.html
+++ b/app_festaNow/templates/festa_now/audience/now.html
@@ -1,12 +1,6 @@
-{% extends 'base.html' %}
-<!-- 
-[base.html]
-<head>
-</head>
-
-<body>
- -->
- {% block content %}
+{% extends 'base_copyright_version.html' %}
+{% block content %}
+ 
  
     <div class="row">
         <div class="col-md-5">
@@ -32,7 +26,7 @@
             <a href="{% url 'new_now' festa.id %}">글쓰기 </a>
             
             <hr>
-            {% for now in nows.all %}
+            {% for now in now_list %}
             <br>
             <a href="{% url 'detail_now' festa.id now.id %}"> : {{now.title}}</a> 
             {{now.writer}}
@@ -46,7 +40,21 @@
             </div>
                 
             {% endfor %}
-       
+            <div class="middle">
+                {%if now_list.has_previous%}
+                <a href="?page=1">First</a>
+                <a href="?page={{now_list.previous_page_number}}">Previous</a>
+                {%endif%}
+
+                <span>{{now_list.number}}</span>
+                <span>of</span>
+                <span>{{now_list.paginator.num_pages}}</span>
+
+                {%if now_list.has_next%}
+                <a href="?page={{now_list.next_page_number}}">Next</a>
+                <a href="?page={{now_list.paginator.num_pages}}">Last</a>
+                {%endif%}
+            </div>
 
 
     </div>
