--- a/project_festa/templates/base_copyright_version.html
+++ b/project_festa/templates/base_copyright_version.html
@@ -39,7 +39,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">등록 확인</a>
+                    <a class="nav-link" href="{% url 'confirm_login' %}">등록 확인</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'new' %}">페스타 등록하기</a>
