공지사항 옮김

--- a/app_festaNow/templates/festa_now/staff/staff_main.html
+++ b/app_festaNow/templates/festa_now/staff/staff_main.html
@@ -6,6 +6,7 @@
         공지사항
     </div>
     <div id="table_bt_div">
+        <a href = "{% url 'confirm_login' festa.id %}">글쓰기</a>
         <span><input type="submit" value="글쓰기"></span>
         <div id="table_div">
             <table>
