--- a/app_festaNow/templates/festa_now/staff/notice/confirm_login.html
+++ b/app_festaNow/templates/festa_now/staff/notice/confirm_login.html
@@ -1,16 +1,13 @@
 {% extends 'base_copyright_version.html' %}
 {% block content %}
-
 <div class="container">
-    <h2>등록 확인</h2>
+    <h2>공지사항 등록하기</h2>
     <br>
     <div class="container">
-        <form action="{% url 'confirm' %}" method="POST">
+        <form action="{% url 'notice' festa.id %}" method="POST">
             {% csrf_token %}
-            <p>인증번호를 입력해주세요</p>
+            <p>등록번호를 입력해주세요</p>
             <input class="btn " type="submit" value="확인">
-            <br>
-            <br>
             <p>등록번호 <input type="text" name="register_num"></p>
         </form>
     </div>
@@ -23,5 +20,4 @@
         height: 300px;
     }
 </style>
-
 {% endblock %}
