--- a/app_festaNow/templates/festa_now/staff/home/staff_home.html
+++ b/app_festaNow/templates/festa_now/staff/home/staff_home.html
@@ -6,13 +6,12 @@
     <a href="{% url 's_new_home' festa.id %}">글쓰기 </a>
 
     <hr>
-    {% for home in homes.all %}
+    {% for home in home_list %}
     <br>
     <a href="{% url 's_detail_home' festa.id home.id %}"> : {{home.title}}</a>
     {{home.region}}
     {{home.writer}}
-    {{home.pub_date|date:"m/d"}}
-    {{home.pub_date|time:"H:i"}}
+    {{home.pub_date}}
     <br>
     <a href="{% url 's_edit_home' festa.id home.id %}" class="card-link">수정하기</a>
     <a href="{% url 's_delete_home' festa.id home.id %}" class="card-link">삭제하기</a>
@@ -22,6 +21,23 @@
     </div>
 
     {% endfor %}
+    <div class="middle">
+        {%if home_list.has_previous%}
+        <a href="?page=1">First</a>
+        <a href="?page={{home_list.previous_page_number}}">Previous</a>
+        {%endif%}
+
+        <span>{{home_list.number}}</span>
+        <span>of</span>
+        <span>{{home_list.paginator.num_pages}}</span>
+
+        {%if home_list.has_next%}
+        <a href="?page={{home_list.next_page_number}}">Next</a>
+        <a href="?page={{home_list.paginator.num_pages}}">Last</a>
+        {%endif%}
+    </div>
+
+
 </div>
 <!-- 자바 스크립트 연결 -->
 {% load static %}
