--- a/app_festaNow/templates/festa_now/staff/team.html
+++ b/app_festaNow/templates/festa_now/staff/team.html
@@ -6,13 +6,11 @@
     <a href="{% url 'new_team' festa.id %}">글쓰기 </a>
 
     <hr>
-    {% for team in teams.all %}
+    {% for team in team_list %}
     <br>
-    <a href="{% url 'detail_team' festa.id team.id %}">{{team.title2}}</a>
-    {{team.post_type}}
+    <a href="{% url 'detail_team' festa.id team.id %}"> : {{team.title2}}</a>
     {{team.writer2}}
-    {{team.pub_date2|date:"m/d"}}
-    {{team.pub_date2|time:"H:i"}}
+    {{team.pub_date}}
     <br>
     <a href="{% url 'edit_team' festa.id team.id %}" class="card-link">수정하기</a>
     <a href="{% url 'delete_team' festa.id team.id %}" class="card-link">삭제하기</a>
@@ -22,7 +20,24 @@
     </div>
 
     {% endfor %}
+    <div class="middle">
+        {%if team_list.has_previous%}
+        <a href="?page=1">First</a>
+        <a href="?page={{team_list.previous_page_number}}">Previous</a>
+        {%endif%}
+    
+        <span>{{team_list.number}}</span>
+        <span>of</span>
+        <span>{{team_list.paginator.num_pages}}</span>
+    
+        {%if team_list.has_next%}
+        <a href="?page={{team_list.next_page_number}}">Next</a>
+        <a href="?page={{team_list.paginator.num_pages}}">Last</a>
+        {%endif%}
+    </div>
 </div>
+
+
 <!-- 자바 스크립트 연결 -->
 {% load static %}
 <script type="text/javascript" src="/static/js/standard_js.js?ver=2' %}"></script>
