--- a/app_festaNow/templates/festa_now/staff/staff_main.html
+++ b/app_festaNow/templates/festa_now/staff/staff_main.html
@@ -8,6 +8,30 @@
     <div id="table_bt_div">
         <a href = "{% url 'confirm_login' festa.id %}">글쓰기</a>
         <span><input type="submit" value="글쓰기"></span>
+        {% for staff in staff_list %}
+                <br>
+                <a href="{% url 'detail_staff' festa.id staff.id %}"> : {{staff.title}}</a> 
+                {{staff.writer}}
+                {{staff.pub_date}}
+                <br>
+                {% endfor %}
+                <div class="middle">
+                    {%if staff_list.has_previous%}
+                    <a href="?page=1">First</a>
+                    <a href="?page={{staff_list.previous_page_number}}">Previous</a>
+                    {%endif%}
+    
+                    <span>{{staff_list.number}}</span>
+                    <span>of</span>
+                    <span>{{staff_list.paginator.num_pages}}</span>
+    
+                    {%if staff_list.has_next%}
+                    <a href="?page={{staff_list.next_page_number}}">Next</a>
+                    <a href="?page={{staff_list.paginator.num_pages}}">Last</a>
+                    {%endif%}
+        
+        
+        
         <div id="table_div">
             <table>
                 <tr>
