base html modify

--- a/project_festa/templates/base.html
+++ b/project_festa/templates/base.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<!-- 기본 베이스 html 파일 -->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-    <!-- navbar시작 -->
+    <!-- 네비게이션 -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light" id="nav_container">
         <a class="navbar-brand" href="{% url 'home' %}">FGD</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -42,18 +42,18 @@
 
         </div>
     </nav>
-    <!-- navbar 끝 -->
 
-    <div id="container_select_staff_audience">
-        <div id="festa_image">
+    <!-- 페이지 왼쪽에 위치한 공연정보 및 이미지, 메뉴 등 -->
+    <div id="contents_container">
+        <div id="left_container">
             <img id="detail_background_img" src="/static/image/detail_background.png" alt="detail">
-            <div id="detail_foreground_div">
+            <div id="background_foreground_combine">
                 <div id="foreground_content_div">
                     <div id="title_text_wrapper">
-                        <div>Festa Now</div>
+                        Festa Now
                     </div>
                     <div id="fore_img_wrapper">
-                        <img id="fore_img" src="{{festa.poster.url}}" style="height:500px">
+                        <img id="fore_img" src="{{festa.poster.url}}">
                     </div>
                     <div id="festa_info_wrapper">
                         <div id="festa_name">
@@ -63,7 +63,7 @@
                             날짜 들어갈 거에요~
                         </div>
                     </div>
-                    <div id="now_menu_wrapper">
+                    <div id="now_staff_menu_wrapper">
                         <div>
                             <a id="notice_menu" href="{% url 'staff_main' festa.id %}">공지사항</a>
                         </div>
@@ -80,8 +80,25 @@
                         <div>
                             <a id="goHome_menu" href="{% url 'staff_home' festa.id %}">집가자</a>
                         </div>
-
                     </div>
+                    <div id="now_audience_menu_wrapper">
+                            <div>
+                                <a id="notice_menu" href="{% url 'staff_main' festa.id %}">공지사항</a>
+                            </div>
+                            <div>
+                                <a id="teamBoard_menu" href="{% url 'now_team' festa.id %}">팀별 게시판</a>
+                            </div>
+                            <div>
+                                <a id="map_menu" href="{% url 'staff_map' festa.id %}">지도</a>
+                            </div>
+                            <div>
+                                <a id="lookingFor_menu" href="{% url 'staff_lost_found' festa.id %}">찾아가라</a>
+                            </div>
+    
+                            <div>
+                                <a id="goHome_menu" href="{% url 'staff_home' festa.id %}">집가자</a>
+                            </div>
+                        </div>
                     <div id="ready_menu_wrapper">
                         <div>
                             <a href="{% url 'ready_main' festa.id %}">공연정보</a>
@@ -97,7 +114,7 @@
 
             </div>
         </div>
-        <div id="festa_select_box">
+        <div id="right_container">
             <!-- 본문 시작 -->
             {% load staticfiles %}
 
@@ -117,11 +134,130 @@
 
 <!-- 자바 스크립트 연결 -->
 {% load static %}
-<script type="text/javascript" src="/static/js/base_js.js?ver=2"></script>
+<script type="text/javascript" src="/static/js/base_js.js?ver=8"></script>
 
 </html>
 
 <style>
+    /************************ center contents ***************/
+
+    /* nav와 footer 사이의 컨텐츠가 들어갈 컨테이너 */
+    #contents_container {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        overflow: hidden;
+    }
+
+    /************************ Right Side ***************/
+
+    /* 오른쪽 변경될 content가 오는 컨테이너 */
+    #right_container {
+        position: relative;
+        width: 65%;
+        height: 100%;
+        background: #EEE9F7;
+    }
+
+    /************************ Left Side ***************/
+
+    /* 왼쪽 고정된 festa 정보가 오는 컨테이너 */
+    #left_container {
+        position: relative;
+        width: 35%;
+        height: 100%;
+        background: #ffffff;
+    }
+
+    /************************ Left Side contents ***************/
+
+    /* 왼쪽 사이드바 배경(background) & festa 정보(foreground) 겹치게 하는 css */
+    #background_foreground_combine {
+        position: absolute;
+        left: 0px;
+        top: 0px;
+        width: 100%;
+        height: 100%;
+    }
+
+    /* foreground(festa 정보가 보열 container),
+    참고 (background는 img id = detail_background_img)  */
+    #foreground_content_div {
+        width: 100%;
+        height: 100%;
+    }
+
+    /* 왼쪽 사이드바에 들어갈 components들의 컨테이너 */
+    #title_text_wrapper,
+    #fore_img_wrapper,
+    #festa_info_wrapper,
+    #now_staff_menu_wrapper,
+    #now_audience_menu_wrapper,
+    #ready_menu_wrapper
+    {
+        width: 100%;
+        padding-left: 32%;
+        padding-right: 15%;
+        font-size: 3vw;
+    }
+
+    /* 왼쪽 사이드바 festa now 인지 festa ready 인지 표시 컨테이너 */
+    #title_text_wrapper {
+        font-weight: bold;
+        font-size: 3vw;
+        margin-top: 50px;
+    }
+
+    /* 왼쪽 사이드바 festa 이미지가 들어갈 컨테이너 */
+    #fore_img_wrapper {
+        margin-top: 2%;
+        height: auto;
+    }
+
+    /* fore_img_wrapper에 들어갈 이미지 */
+    #fore_img{
+        max-width: 100%;
+    }
+
+    /* 왼쪽 사이드바 festa 이름, 진행 날짜 정보가 들어가는 컨테이너 */
+    #festa_info_wrapper {
+        height: auto;
+        margin-top: 1%;
+    }
+
+    /* festa_info_wrapper 안에 있는 festa 이름 */
+    #festa_name {
+        font-weight: bold;
+    }
+
+    /* festa_infot_wrapper 안에 있는 festa 날짜 */
+    #festa_date {
+        font-size: 14px;
+        font-weight: 500;
+        opacity: 0.5;
+    }
+
+    /* 왼쪽 사이드바 메뉴 아이템(공연정보, 지도, 찾아가라 등) container css */
+    #now_staff_menu_wrapper, #now_audience_menu_wrapper, #ready_menu_wrapper {
+        display: none;
+        font-weight: bold;
+        margin-top: 6%;
+    }
+
+    /* menu_wrapper 안에 있는 아이템의 개별 div css */
+    #now_staff_menu_wrapper div, #now_audience_menu_wrapper div, #ready_menu_wrapper div{
+        margin-top: 0.2vw;
+    }
+
+    /* menu_wrapper 안에 있는, div 안에 있는 a 태그 css */
+    #now_staff_menu_wrapper div a, #now_audience_menu_wrapper div a, #ready_menu_wrapper div a{
+        color: #000000;
+        text-decoration: none;
+    }
+
+    /************************ footer ***************/
+
+    /* 푸터 css */
     #bt_footer_element {
         width: 100%;
         display: flex;
@@ -130,104 +266,16 @@
         padding-left: 8%;
     }
 
-    #bt_footer_element a {
-        color: #000000;
-        text-decoration: none;
-    }
-
-    #now_menu_wrapper div a, #ready_menu_wrapper div a{
-        color: #000000;
-        text-decoration: none;
-        font-size: 20px;
-    }
-
-    #now_menu_wrapper div, #ready_menu_wrapper div{
-        margin-top: 0.5rem;
-    }
-
+    /* 푸터(개인정보, 이용약관, 서비스 소개 등) 버튼 css */
     .footer_item_top {
         margin-left: 0.5%;
         margin-right: 0.5%;
         font-size: 14px;
     }
 
-    #container_select_staff_audience {
-        width: 100%;
-        height: 100%;
-        display: flex;
-        overflow: hidden;
-    }
-
-    #festa_image {
-        position: relative;
-        width: 40%;
-        height: 100%;
-        background: #ffffff;
-    }
-
-    #detail_foreground_div {
-        position: absolute;
-        left: 0px;
-        top: 0px;
-        width: 100%;
-        height: 100%;
-    }
-
-    #foreground_content_div {
-        width: 100%;
-        height: 100%;
-    }
-
-    #fore_img_wrapper,
-    #now_menu_wrapper,
-    #ready_menu_wrapper,
-    #title_text_wrapper,
-    #festa_info_wrapper {
-        margin-left: 32%;
-        margin-right: 15%;
-    }
-
-    #title_text_wrapper {
-        height: 10%;
-        font-size: 20px;
-        font-weight: bold;
-        display: flex;
-    }
-    #title_text_wrapper div{
-        height: auto;
-        align-self: center;
-    }
-
-    #fore_img_wrapper {
-        margin-top: 1rem;
-    }
-
-    #festa_info_wrapper {
-        height: 10%;
-        margin-top: 15px;
-    }
-
-    #festa_name {
-        font-size: 20px;
-        font-weight: bold;
-    }
-
-    #festa_date {
-        font-size: 14px;
-        font-weight: 500;
-        opacity: 0.5;
-    }
-
-    #now_menu_wrapper, #ready_menu_wrapper {
-        display: none;
-        margin-top: 40px;
-        font-weight: bold;
-        font-size: 20px;
-    }
-
-    #festa_select_box {
-        width: 60%;
-        background: #EEE9F7;
-        display: flex;
+    /* 푸터(개인정보, 이용약관, 서비스 소개 등) 버튼의 텍스트 css */
+    .footer_item_top a {
+        color: #000000;
+        text-decoration: none;
     }
 </style>
