--- a/app_festaNow/templates/festa_now/detail.html
+++ b/app_festaNow/templates/festa_now/detail.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<div id="select_box">
-    <div>어떤 역할로 참여하시나요?</div>
+<div id="detail_container">
+    <div id="explain_role_box">어떤 역할로 참여하시나요?</div>
     <div id="staff_or_audience_bt">
         <form id="staff_form" action="{% url 'staff_login' festa.id %}" method="GET">
             <input id="staffBt" type="submit" value="Staff">
@@ -17,19 +17,19 @@
 
 <!-- 자바 스크립트 연결 -->
 {% load static %}
-<script type="text/javascript" src="/static/js/detail_js.js?ver=2'"></script>
+<script type="text/javascript" src="/static/js/detail_js.js?ver=7'"></script>
 
 <style>
-    #select_box {
-        height: auto;
+    #detail_container {
         width: 100%;
-        align-self: center;
+        height: 100%;
         padding-left: 15%;
+        margin-top: 50px;
     }
 
-    #select_box div {
-        padding-bottom: 68px;
-        font-size: 36px;
+    #explain_role_box{
+        /* padding-bottom: 68px; */
+        font-size: '20px';
         font-weight: bold;
     }
 
@@ -71,7 +71,7 @@
         font-size: 14px;
         opacity: 0.5;
         text-align: center;
-        padding-top: 3%;
+        /* padding-top: 3%; */
     }
 </style>
 {% endblock %}
