login html modify

--- a/app_festaNow/templates/festa_now/detail.html
+++ b/app_festaNow/templates/festa_now/detail.html
@@ -17,7 +17,7 @@
 
 <!-- 자바 스크립트 연결 -->
 {% load static %}
-<script type="text/javascript" src="/static/js/detail_js.js?ver=7'"></script>
+<script type="text/javascript" src="/static/js/detail_js.js?ver=8'"></script>
 
 <style>
     #detail_container {
@@ -28,18 +28,15 @@
     }
 
     #explain_role_box{
-        /* padding-bottom: 68px; */
-        font-size: '20px';
+        font-size: 3vw;
         font-weight: bold;
+        padding-top: 100px;
     }
 
     #staff_or_audience_bt {
         display: flex;
         width: 100%;
-    }
-
-    #staff_or_audience_bt form {
-        width: 28%;
+        margin-top: 70px;
     }
 
     #audience_form {
@@ -71,7 +68,7 @@
         font-size: 14px;
         opacity: 0.5;
         text-align: center;
-        /* padding-top: 3%; */
+        padding-top: 3%;
     }
 </style>
 {% endblock %}
